--- a/grunt/configBridge.json
+++ b/grunt/configBridge.json
@@ -2,11 +2,11 @@
   "paths": {
     "docsJs": [
       "../assets/js/vendor/holder.min.js",
-      "assets/js/vendor/jekyll-search.js",
       "../assets/js/vendor/ZeroClipboard.min.js",
       "../assets/js/vendor/anchor.js",
       "../assets/js/vendor/tether.min.js",
-      "../assets/js/src/application.js"
+      "../assets/js/src/application.js",
+      "../assets/js/src/search.js"
     ]
   },
   "config": {
