Modifications by Sylvain

--- a/grunt/configBridge.json
+++ b/grunt/configBridge.json
@@ -5,7 +5,8 @@
       "../assets/js/vendor/ZeroClipboard.min.js",
       "../assets/js/vendor/anchor.min.js",
       "../assets/js/vendor/tether.min.js",
-      "../assets/js/src/application.js"
+      "../assets/js/src/application.js",
+      "../assets/js/src/search.js"
     ]
   },
   "config": {
